# flowshot

./: .gitignore  CMakeLists.txt  PKGBUILD  main.cpp  main.h  resources.qrc
app/: Application.cpp  Application.h  ScreenshotManager.cpp  ScreenshotManager.h
app/pages/settings/: configEntry.cpp  configEntry.h  filenameEditor.cpp  filenameEditor.h  generalconf2.cpp  generalconf2.h
config/: experiments.cpp  experiments.h
data/: flowshot2.rc
data/appdata/: com.flowinity.flowshot2.metainfo.xml
data/dbus/: com.flowinity.flowshot2.service.in  com.flowinity.flowshot2.xml
data/desktopEntry/package/: com.flowinity.flowshot2.desktop
data/servicemenus/: flowshot2-upload-file.desktop
ipc/dbus/: flowshotdbusadapter.cpp  flowshotdbusadapter.h
uploader/: imguploaderbase.cpp  imguploaderbase.h  imguploadermanager.cpp  imguploadermanager.h
uploader/privateuploader/: PrivateUploaderUploadHandler.cpp  PrivateUploaderUploadHandler.h  PrivateUploaderUploadV2.cpp  PrivateUploaderUploadV2.h  privateuploader.cpp  privateuploader.h  privateuploaderupload.cpp  privateuploaderupload.h
uploader/privateuploader/responses/: FlowinityValidUploadResponse.cpp  FlowinityValidUploadResponse.h
utils/: ConfigHandler.cpp  ConfigHandler.h  ValueHandler.cpp  ValueHandler.h  abstractlogger.cpp  clipboard.cpp  clipboard.h  filenamehandler.cpp  filenamehandler.h  rng.cpp  rng.h
utils/flowinity/: EndpointsJSON.cpp
utils/widgets/: imagelabel.cpp  imagelabel.h
